--- a/client/app/styles/variables/_variables.scss
+++ b/client/app/styles/variables/_variables.scss
@@ -4,6 +4,7 @@ $font-family-open-sans: 'Open Sans', Helvetica, Arial, sans-serif !default;
 $base-font-family: $font-family-open-sans !default;
 $base-font-size: 14px;
 $base-font-size-s: ceil(($base-font-size * 0.85)) !default;
+$base-font-size-ms: ceil(($base-font-size * 1.1)) !default;
 $base-font-size-m: ceil(($base-font-size * 1.25)) !default;
 $base-font-size-l: ceil(($base-font-size * 1.50)) !default;
 $base-font-size-xl: ceil(($base-font-size * 1.75)) !default;
@@ -21,6 +22,22 @@ $navbar-default-dropdown-link-color: #ecf0f1 !default;
 $navbar-default-dropdown-hover-bg: #ecf0f1 !default;
 $navbar-default-dropdown-hover-link-color: #2d3e50 !default;
 $navbar-default-dropdown-divider-bg: #ecf0f1 !default;
+
+//collapsed (small devices)
+$navbar-default-collapsed-line-height: 40px !default;
+$navbar-default-collapsed-link-font-size: $base-font-size-ms !default;
+$navbar-default-collapsed-expand-icon: "\f196" !default;
+$navbar-default-collapsed-expand-icon-color: #ecf0f1 !default;
+$navbar-default-collapsed-bg-color: #2d3e50 !default;
+$navbar-default-collapsed-link-color: #ecf0f1 !default;
+$navbar-default-collapsed-border-color: #ecf0f1 !default;
+
+$navbar-default-collapsed-dropdown-bg-color: #e9e9e9 !default;
+$navbar-default-collapsed-dropdown-link-color: #2d3e50 !default;
+$navbar-default-collapsed-dropdown-border-color: #2d3e50 !default;
+$navbar-default-collapsed-dropdown-hover-bg-color: #2d3e50 !default;
+$navbar-default-collapsed-dropdown-hover-link-color: #ecf0f1 !default;
+$navbar-default-collapsed-dropdown-hover-border-color: #ecf0f1 !default;
 //$font-size-base: 20px !default;
 //$navbar-height: 120px !default;
 //$navbar-margin-bottom: 0 !default;
